--- a/styles.css
+++ b/styles.css
@@ -168,15 +168,34 @@ main {
 }
 
 .select,
-input {
+input,
+.pay-btn {
   text-align: center;
   width: 15rem;
   height: 2rem;
   border: none;
   border-radius: 1rem;
   padding: 1rem;
+  background-color: #dcdcdd;
+  color: #212529;
+
+  font-size: 1.2rem;
+}
+
+.pay-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+
+  height: 2.2rem;
+  color: #f8f9fa;
   background-color: #5a00d0;
-  color: #e9ecef;
+  padding: 0.2rem;
+}
+
+.pay-btn p {
+  color: #f8f9fa;
 }
 
 .hide {
