--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ main {
   transform: scale(1.1);
 }
 
-.reserve-bus-card {
+.card-style {
   background-color: #f8f9fa;
   width: 65%;
   height: 65vh;
@@ -118,7 +118,9 @@ main {
   margin-right: 0.5rem;
 }
 
-.brand-btn .ph-duotone {
+.brand-btn,
+.ph-duotone,
+.ph-wallet {
   font-size: 1.8rem;
   /* color: #51db1f; */
 }
@@ -168,8 +170,7 @@ main {
 }
 
 .select,
-input,
-.pay-btn {
+input {
   text-align: center;
   width: 15rem;
   height: 2rem;
@@ -182,22 +183,91 @@ input,
   font-size: 1.2rem;
 }
 
-.pay-btn {
+/* Payment section */
+.secure-div {
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-
-  height: 2.2rem;
-  color: #f8f9fa;
-  background-color: #5a00d0;
-  padding: 0.2rem;
-}
-
-.pay-btn p {
-  color: #f8f9fa;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
 }
 
 .hide {
   display: none;
+}
+
+.pay-section {
+  justify-content: left;
+  align-items: first baseline;
+  padding: 4rem;
+}
+
+.form-div p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  font-weight: 600;
+}
+
+.pay-div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5rem;
+}
+
+.pay-div input {
+  width: 100%;
+  border-radius: 0.2rem;
+  padding: 0.2rem;
+  border: 1px solid;
+  background-color: #f7f6f6;
+  border-color: #495057;
+}
+
+.pay-div label {
+  margin-bottom: 0.3rem;
+}
+
+.card-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.card-info input {
+  width: 100%;
+}
+
+.security {
+  margin-left: 0.5rem;
+}
+
+.ph-shield-check {
+  color: #5a00d0;
+}
+
+.ph-wallet {
+}
+
+.pay-btn {
+  border: none;
+  border-radius: 2rem;
+  width: 15rem;
+  height: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  margin: auto;
+  background-color: #5a00d0;
+  color: #dcdcdd;
+}
+
+.pay-btn p,
+.pay-btn i {
+  text-align: center;
+  margin: auto 0;
 }
